# polymarketeer

./: CONTRIBUTING.md  README.md  dune-project  polymarketeer.opam
app/: api.ml  client.ml  clob.ml  clob.mli  commands.ml  commands.mli  dune  main.ml  main.mli  stitched.ml  trade.ml  web.ml
lib/asset_management/: dune  ledger.ml  ledger.mli  person.ml  person.mli  portfolio.ml  portfolio.mli  transaction_failure.ml  transaction_failure.mli
lib/asset_management/test/: dune  test_ledger.ml  test_person.ml  test_portfolio.ml
lib/ledger/: dune  portfolio.ml  portfolio.mli
lib/ledger/test/: dune  test_portfolio.ml
lib/polymarket/queries/: clob.ml  clob.mli  endpoint.ml  endpoint.mli  stitched.ml  web.ml  web.mli
lib/polymarket/queries/test/: test_endpoints.ml
lib/polymarket/types/: dollar.ml  dune  next_cursor.ml  next_cursor.mli  side.ml  token.ml  token.mli
lib/polymarket/types/test/: test_price.ml
lib/polymarket_queries/: dune  endpoint.ml  endpoint.mli  get_book.ml  get_book.mli  get_market.ml  get_market.mli  get_price.ml  get_price.mli  sampling_markets.ml  sampling_markets.mli  unofficial.ml  unofficial.mli
lib/polymarket_queries/test/: dune  test_endpoints.ml  test_polymarket.ml
lib/polymarket_types/: dollar.ml  dollar.mli  dune  market.ml  market.mli  next_cursor.ml  next_cursor.mli  orderbook.ml  orderbook.mli  price.ml  price.mli  side.ml  side.mli  token.ml  token.mli
lib/polymarket_types/test/: dune  test_next_cursor.ml  test_price.ml  test_side.ml
